tests/language_modules/18_string_templates/invalid_semantics/string_template_count_mismatch.vf
module StringTemplateCountMismatch

procedure main()
is
    let message: String = String.template("id=${}, active=${}", 7)
    check message = "id=7, active=true"
end main

end StringTemplateCountMismatch